JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/a00.c
ALGORITHM(a00){
  x=0;
}