JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test13.c
ALGORITHM(test13){
	non = mais
}
